# ieee_case

./: .gitignore  README.md
robot_workcell_agent/: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
robot_workcell_agent/comparisons/: __init__.py  run_all.py
robot_workcell_agent/comparisons/evaluation/: __init__.py  harness.py  metrics.py  ours_pipeline.py
robot_workcell_agent/comparisons/langchain_tools/: __init__.py  pipeline.py  tools.py
robot_workcell_agent/comparisons/naive_llm/: __init__.py  pipeline.py  prompts.py
robot_workcell_agent/comparisons/shared/: __init__.py  config.py  evidence_logger.py  stage_scripts.py  test_prompts.py  validators.py
robot_workcell_agent/comparisons/skills_no_disclosure/: __init__.py  pipeline.py
robot_workcell_agent/skills/gap_resolver/: SKILL.md
robot_workcell_agent/skills/genesis_scene_builder/: SKILL.md
robot_workcell_agent/skills/motion_primitives/: SKILL.md
robot_workcell_agent/skills/placement_solver/: SKILL.md
robot_workcell_agent/skills/region_proposer/: SKILL.md
robot_workcell_agent/skills/request_interpreter/: SKILL.md
robot_workcell_agent/skills/robot_selector/: SKILL.md
robot_workcell_agent/skills/simulation_validator/: SKILL.md
robot_workcell_agent/skills/sku_analyser/: SKILL.md
robot_workcell_agent/src/: __init__.py  agent.py  cli.py  dependencies.py  llm_client.py  logging_config.py  prompts.py  providers.py  runtime.py  schemas.py  settings.py  skill_loader.py  skill_tools.py  skill_toolset.py
robot_workcell_agent/tests/: __init__.py
workcell_components/: README.md
(+42 files in other folders)
