[project]
name = "robot-workcell-agent"
version = "1.0.0"
description = "AI-powered robot workcell design agent with progressive skill disclosure"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
